# libsignal

./: .bazelrc  MODULE.bazel
